<resources>
    <string name="go_to_change_role">去切换身份</string>
    <string name="change_roler_foreman">切换成【班组长】</string>
    <string name="change_roler_worker">切换成【工人】</string>
    <string name="no_change_role">不切换</string>
    <string name="confirm_wheel">确认</string>
    <string name="editor">编辑</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="current_source_list">现成数据源列表</string>
    <string name="updateNow">立即更新</string>
    <string name="delete">删除</string>
    <string name="more_operation">更多操作</string>
    <string name="service_err">加载失败,请稍后重试!</string>
    <string name="realname">姓名:</string>
    <string name="sexuality">性别:</string>
    <string name="sexnan1">男</string>
    <string name="sexnv1">女</string>
    <string name="age">年龄:</string>
    <string name="peopcount">工人规模:</string>
    <string name="peopcount_hint">请输入工人规模</string>
    <string name="hometown">家乡:</string>
    <string name="workyear">工龄:</string>
    <string name="familiarity">熟悉度</string>
    <string name="engineering">工程类别</string>
    <string name="craft">工种:</string>
    <string name="expecttowork">期望工作地:</string>
    <string name="expecttowork1">期望工作地</string>
    <string name="ensurecorrect">请确认以上信息准确无误</string>
    <string name="head">头像:</string>
    <string name="uphead">点击上传头像</string>
    <string name="realnamehint">请输入你的姓名</string>
    <string name="agehint">请输入年龄</string>
    <string name="hometownhint">选择家乡可以让朋友找到你</string>
    <string name="engineering_hint">请选择你主要从事的工程类别</string>
    <string name="crafthint">请选择你主要从事的工种</string>
    <string name="selected_familiarity">请选择熟练度</string>
    <string name="workyearhint">请输入工龄</string>
    <string name="workyearRange">工龄范围0~50</string>
    <string name="ageRange">年龄范围16~60</string>
    <string name="expecttoworkhint">请选择工作地</string>
    <string name="remind">为了提高工作的机会,请认真填写以下有效的真实信息</string>
    <string name="workstate_hint">请选择工作状态</string>
    <string name="lookAddr">查看地址</string>
    <string name="format_showimgs_txt_title">%1$d/%2$d</string>
    <string name="edit_project">编辑项目</string>
    <string name="save">保存</string>
    <string name="assign">确定</string>
    <string name="single_batch_account_un_selecte">记工时</string>
    <string name="single_batch_account_selecte">请从以上日历中选择要记工的日期</string>
    <string name="review_cnt">%1$s次浏览</string>
    <string name="filter">搜索查看</string>
    <string name="synchpro">同步项目</string>
    <string name="synch">同步</string>
    <string name="add_pro">新建项目</string>
    <string name="submit">提交</string>
    <string name="save_update">保存修改</string>
    <string name="evaluation">评价</string>
    <string name="add_evaluation">增加评价</string>
    <string name="evaluation_details">评价详情</string>
    <string name="overall_evaluation">总体评分</string>
    <string name="personal_integrity">个人诚信</string>
    <string name="knot_speed">结款速度</string>
    <string name="attitude">为人态度</string>
    <string name="all_evaluation">全部评分</string>
    <string name="has_been_evaluated">已有%1$d人参与评价</string>
    <string name="project_name">项目名称&#160;:&#160;</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址&#160;:&#160;</string>
    <string name="project_scope">项目评分</string>
    <string name="project_evaluation">项目评价</string>
    <string name="one_star">很恶劣</string>
    <string name="two_star">太糟糕</string>
    <string name="three_star">一般般</string>
    <string name="four_star">还不错</string>
    <string name="five_star">非常棒</string>
    <string name="login_pwd">请输入手机号</string>
    <string name="login">登录</string>
    <string name="set">设置</string>
    <string name="agreenment">吉工家用户协议</string>
    <string name="get_code">点击获取验证码</string>
    <string name="get_unsubscibe_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="input_mobile">请输入手机号码</string>
    <string name="input_message_code">请输入短信验证码</string>
    <string name="input_sure_mobile">手机号码格式有误</string>
    <string name="mobile_is_no_empty">手机号码不能为空</string>
    <string name="please_input_code_first">请输入验证码</string>
    <string name="input_news_code">请输入收到的短信验证码</string>
    <string name="location_error">未定位</string>
    <string name="keywordhint">请输入城市的中文名称或拼音</string>
    <string name="photo_list">图片列表</string>
    <string name="projectnamehint">请输入项目名称</string>
    <string name="select_date">选择日期</string>
    <string name="grade">评分&#160;:&#160;</string>
    <string name="modification">修改</string>
    <string name="experience">经验</string>
    <string name="pricemode">计价方式</string>
    <string name="peoplecount">人数/报酬</string>
    <string name="peoplehint">输入需要人数</string>
    <string name="wireman">电工</string>
    <string name="pricemode_hour">点工</string>
    <string name="pricemode_all">包工</string>
    <string name="pricemode_square">平方</string>
    <string name="pricemode_cube">立方</string>
    <string name="pricemode_m">&#160;&#160;米&#160;&#160;</string>
    <string name="pricemode_ton">&#160;&#160;吨&#160;&#160;</string>
    <string name="foreman">班组长/工头</string>
    <string name="foremans">班组长</string>
    <string name="workers">工人</string>
    <string name="paid_day">天结</string>
    <string name="paid_month">月结</string>
    <string name="rewardhint">输入报酬</string>
    <string name="conn_fail">网络连接异常,请检查网络后重试!</string>
    <string name="searching">查询数据中,请稍候!</string>
    <string name="submit_success">提交成功!</string>
    <string name="photo_detail">图片详情</string>
    <string name="white_money">填写金额</string>
    <string name="name_null">请输入姓名</string>
    <string name="name_length_error">姓名位数超出标注,请再次确认</string>
    <string name="idcard_null">请输入号码</string>
    <string name="idcard_error">身份证号码格式错误</string>
    <string name="age_null">请输入年龄</string>
    <string name="home_null">请选择你的家乡</string>
    <string name="workpeopcount">工人规模1~99999</string>
    <string name="worktype_null">所需工种</string>
    <string name="select_project">选择项目</string>
    <string name="story">保存</string>
    <string name="complete_information">完善资料</string>
    <string name="go_complete_information">立即完善</string>
    <string name="send_invite">发送</string>
    <string name="put_working_years">请输入工龄</string>
    <string name="personauth_hint1">实名认证后，你会得到这些好处</string>
    <string name="personauth_hint2">你的信息优先展示,用工方会首先看到</string>
    <string name="personauth_hint3">你的项目发布成功后会优先展示,更快招到人</string>
    <string name="personauth_hint4">恭喜你已通过实名认证</string>
    <string name="personauth_hint5">赶紧去找工作/找活干吧</string>
    <string name="personauth_hint6">信息正在认证中</string>
    <string name="personauth_hint7">需要1~2个工作日</string>
    <string name="personauth_hint8">真实姓名与身份证号码不一致</string>
    <string name="personauth_hint9">无此身份证号码</string>
    <string name="personauth">个人认证</string>
    <string name="share">分享</string>
    <string name="jump">跳过</string>
    <string name="year">年</string>
    <string name="yearsold">岁</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="more">更多</string>
    <string name="date_desc">%1$d年%2$d月%3$s</string>
    <string name="income">工&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;资:</string>
    <string name="borrow">借&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;支:</string>
    <string name="account_laborage">结算:</string>
    <string name="record_setting">记工设置 </string>
    <string name="total_work">记工合计</string>
    <string name="outstanding_wages">未结工资</string>
    <string name="outstanding_wages_colon">未结工资:</string>
    <string name="pricemode_hour_wage">点工工钱</string>
    <string name="pricemode_all_wage">包工工钱</string>
    <string name="borrowing_wage">借支工钱</string>
    <string name="borrowing">借支</string>
    <string name="wages_settlement">结算</string>
    <string name="remember_other">保存 再记一笔</string>
    <string name="forman_headman">班组长/工头</string>
    <string name="select_worker_hint">请选择要记账的工人</string>
    <string name="salary_mode_setting">设置工资/上班时长/加班时长</string>
    <string name="today_working">上班时长</string>
    <string name="today_working_overtime">加班时长</string>
    <string name="location_project">所在项目</string>
    <string name="input_number">这里输入数量</string>
    <string name="noworking_overtime">如有加班,点击选择</string>
    <string name="unit_price">填写单价</string>
    <string name="element">这里输入单价金额</string>
    <string name="count">填写数量</string>
    <string name="subentry_name">分项名称</string>
    <string name="subentry_name_details">例如：包柱子/挂窗帘</string>
    <string name="releasebookkeeping">发布记账</string>
    <string name="useinstructions">使用说明</string>
    <string name="everyDayTitle">每日考勤表</string>
    <string name="remberworkinfotitle">记工流水</string>
    <string name="select_all_page">全选本页</string>
    <string name="select">选择</string>
    <string name="hint_wps">如果无法正常查看，请下载安装WPS软件</string>
    <string name="input_worker_name">请输入工人的姓名</string>
    <string name="input_worker_phone">请输入工人的电话号码</string>
    <string name="input_foreman_name">请输入班组长/工头的姓名</string>
    <string name="input_foreman_phone">请输入班组长/工头的电话号码</string>
    <string name="nickname_other">请输入对方的姓名</string>
    <string name="telephone_way">请输入对方联系方式</string>
    <string name="addMember">添加成员</string>
    <string name="add_foreman">添加班组长</string>
    <string name="optional">备注&#160;(例如公司名称等)</string>
    <string name="select_person">选择成员</string>
    <string name="eight_hour">8小时(1个工)</string>
    <string name="input_team_name">请输入班组名称</string>
    <string name="input_project_name">请输入项目名称</string>
    <string name="new_add_project">新增</string>
    <string name="edit">修改</string>
    <string name="without_workerinfo">联系表中暂时没有工人的信息</string>
    <string name="add_worker">添加工人</string>
    <string name="add_contractor_person">添加承包对象</string>
    <string name="address_release">隐患部位</string>
    <string name="add">添加</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="project_name_title">项目</string>
    <string name="amounts">差账</string>
    <string name="total">金额</string>
    <string name="about_project">与%1$s项目相关</string>
    <string name="about_person">与%1$s相关的项目</string>
    <string name="title_content">内容</string>
    <string name="title_date">日期</string>
    <string name="recordMerit">记工记账</string>
    <string name="selectWorker">选择工人</string>
    <string name="selectForeman_title">选择班组长</string>
    <string name="selectForeman">选班组长</string>
    <string name="selecte_member">选择班组成员</string>
    <string name="pleaseSelectWorker">请选择要记账的工人</string>
    <string name="pleaseSelectFM">请选择要记账的班组长/工头</string>
    <string name="pressSpeck">按住说话,可以记录当天工作</string>
    <string name="pressPhono">点击拍照或者选择照片可以记录当天工作</string>
    <string name="seletRole">请根据需要选择你的身份</string>
    <string name="derect_select">直接选择</string>
    <string name="report">举报</string>
    <string name="friend_size">你有%1$s个朋友认识他</string>
    <string name="id_card_name">姓&#160;&#160;&#160;&#160;名&#160;:&#160;</string>
    <string name="example_data">这些都是示例数据,无法操作,谢谢!</string>
    <string name="ple_select_ob">请先选择记账对象</string>
    <string name="remark_pic">[图片]</string>
    <string name="sync_person">选择要同步给%1$s的项目</string>
    <string name="please_select_record_object">请先选择记账对象</string>
    <string name="syn_manage">同步项目管理</string>
    <string name="contacts_title">手机通讯录</string>
    <string name="add_syn_person">新增同步人</string>
    <string name="check_list">检查项</string>
    <string name="plan_name">计划名称</string>
    <string name="execute_time">执行时间</string>
    <string name="input_plan_name_hint">请输入计划名称</string>
    <string name="selecte_execute_time">请选择执行时间</string>
    <string name="execute_person">执行人</string>
    <string name="click_head_tips">(点击头像可删除)</string>
</resources>