<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f1f1f1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        style="@style/unclick_layout"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <TextView
            style="@style/textViewKey_relativeLayout"
            android:text="@string/plan_name" />

        <com.hcs.cityslist.widget.AppCursorEditText
            android:id="@+id/planNameEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/input_plan_name_hint"
            android:maxLength="15"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_cccccc"
            android:textSize="15sp" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/executeTimeLayout"
        style="@style/click_layout">

        <TextView
            android:id="@+id/executeTimeTips"
            style="@style/textViewKey_relativeLayout"
            android:text="@string/execute_time" />

        <TextView
            android:id="@+id/executeTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/executeTimeTips"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/houtui"
            android:gravity="center_vertical|right"
            android:hint="@string/selecte_execute_time"
            android:textColor="@color/color_333333"
            android:textColorHint="@color/color_cccccc"
            android:textSize="15sp" />

        <View style="@style/line" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/execute_person"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_head_tips"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_14" />
    </LinearLayout>

    <com.jizhi.jongg.widget.WrapGridview
        android:id="@+id/executeGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:horizontalSpacing="10dp"
        android:listSelector="#00000000"
        android:numColumns="6"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp"
        android:verticalSpacing="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/check_list"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/text_size_14" />


</LinearLayout>